--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-fileupload": "^1.0.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
+    "jwt-simple": "^0.5.5",
     "mongoose": "^5.3.15",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
